fix(graphql): 类型转换错误